--- a/package.json
+++ b/package.json
@@ -10,14 +10,13 @@
   "author": "Bitgamma",
   "license": "CC0-1.0",
   "devDependencies": {
-    "electron": "^2.0.7",
+    "electron": "^2.0.8",
     "electron-compilers": "^5.9.0",
     "electron-rebuild": "^1.8.2",
-    "node-hid": "^0.7.3",
     "node-sass": "^4.9.3"
   },
   "dependencies": {
     "electron-compile": "^6.4.3",
-    "node-hid": "^0.7.3"
+    "node-hid": "bitgamma/node-hid"
   }
 }
