--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   },
   "dependencies": {
     "node-hid": "bitgamma/node-hid",
+    "nrf-intel-hex": "^1.3.0",
     "usb-detection": "^3.2.0"
   },
   "build": {
